--- a/assets/css/project-detail.css
+++ b/assets/css/project-detail.css
@@ -49,6 +49,15 @@
     background: var(--gradient-1);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+
+.emoji {
+    -webkit-text-fill-color: initial;
+    background: none;
+    -webkit-background-clip: initial;
+    background-clip: initial;
+    display: inline-block;
 }
 
 .project-meta-grid {
